<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="br.edu.ifsc.aluno.kauanelb.mobile.ctrlcurso.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="br.edu.ifsc.aluno.kauanelb.mobile.ctrlcurso.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="br.edu.ifsc.aluno.kauanelb.mobile.ctrlcurso.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_cad_aluno"
        android:name="br.edu.ifsc.aluno.kauanelb.mobile.ctrlcurso.ui.aluno.CadAlunoFragment"
        android:label="@string/title_cad_aluno"
        tools:layout="@layout/fragment_cad_aluno" />
    <fragment
        android:id="@+id/navigation_con_aluno"
        android:name="br.edu.ifsc.aluno.kauanelb.mobile.ctrlcurso.ui.aluno.ConAlunoFragment"
        android:label="@string/title_con_aluno"
        tools:layout="@layout/fragment_con_aluno_list" />
</navigation>